# WallpaperChanger

./: .gitignore  README-windows.txt  README.md  build.bat  config.yaml  go.mod  go.sum  main.go
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: --.md  Feature request.md
.github/workflows/: release.yml
cmd/config-creater/: main.go
cmd/wallpaper-changer/: command.go  main.go
cmd/wallpaper-registry/: command.go  main.go
configs/: config.go  rectangle.go
constants/: image-extension.go
model/: image-data.go
utils/: get-exe-file-directory.go
utils/window/: window_windows.go
utils/windows/: data-types_windows.go  dll_windows.go  syscall_windows.go  zerrors_windows.go
utils/windows/basetsd/: basetsd.go
utils/windows/combaseapi/: combaseapi.go
utils/windows/fileio/: fileio.go
utils/windows/intsafe/: intsafe.go
utils/windows/kernel32/: kernel32.go
utils/windows/shobjidl_core/: s-h-browse-for-folder.go  shobjdl_core.go
utils/windows/shtypes/: shtypes.go
utils/windows/user32/: user32-f-win-ini_windows.go  user32-ui-action_windows.go  user32_windows.go
utils/windows/windef/: rect_windows.go  windef.go
utils/windows/wingdi/: wingdi_windows.go
utils/windows/winnt/: winnt.go
utils/windows/winuser/: enum-display-monitors_windows.go  get-monitor-info_windows.go  monitorrenumproc_windows.go  system-parameters-info_windows.go  winuser_windows.go
workspace/: Cargo.toml
workspace-go/: go.mod  go.sum
workspace-go/cmd/config-creater/: command.go  main.go
workspace-go/cmd/wallpaper-changer/: main.go
workspace-go/cmd/wallpaper-registry/: main.go
workspace-go/configs/: rectangle.go
workspace-go/constants/: image-extension.go
workspace-go/subcommand/: version.go
workspace-go/utils/: get-exe-file-directory.go
workspace-go/utils/window/: window_windows.go
workspace-go/utils/windows/combaseapi/: combaseapi.go
workspace-go/utils/windows/shobjidl_core/: shobjdl_core.go
workspace-go/utils/windows/winuser/: winuser.go
workspace-rust/: Cargo.toml
workspace-rust/config-creater/: Cargo.toml  build.rs
workspace-rust/config-creater/src/: config.rs  main.rs
workspace-rust/wallpaper-changer/: Cargo.toml  build.rs
workspace-rust/wallpaper-changer/src/: config.rs  main.rs
workspace-rust/wallpaper-registry/: Cargo.toml  build.rs
workspace-rust/wallpaper-registry/src/: main.rs  subcommand.rs
workspace/config-creater/: Cargo.toml  build.rs
workspace/wallpaper-changer/: Cargo.toml  build.rs
workspace/wallpaper-registry/: build.rs  licenses.toml
workspace/wallpaper-registry/src/: main.rs  utils.rs
workspace/wallpaper-registry/src/subcommand/: version.rs
