[workspace]
members = ["config-creater", "wallpaper-changer", "wallpaper-registry"]
resolver = "2"

[workspace.package]
version = "2.0.0-develop"
edition = "2024"

[profile.dev]
opt-level = 1
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

[profile.release]
codegen-units = 1
opt-level = 3
lto = true
panic = "abort"
strip = true
