[package]
name = "wallpaper-changer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "WallpaperChanger"
path = "src/main.rs"

[build-dependencies]
serde_json = "1.0.145"

[dependencies]
image = "0.25.8"
rand = "0.9.2"
yaml-rust2 = "0.10.4"
walkdir = "2.5.0"
windows = { version = "0.62.2", features = [
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging"
]}
