[package]
name = "wallpaper-changer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "WallpaperChanger"
path = "src/main.rs"

[build-dependencies]
serde_json = "1.0.149"

[dependencies]
image = "0.25.10"
rand = "0.10.1"
yaml-rust2 = "0.11.0"
walkdir = "2.5.0"
windows = { version = "0.62.2", features = [
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_UI_WindowsAndMessaging"
]}
windows-registry = "0.6.1"
