[package]
name = "wallpaper-registry"
version.workspace = true
edition.workspace = true

[[bin]]
name = "WallpaperRegistry"
path = "src/main.rs"

[build-dependencies]
serde_json = "1.0.145"

[dependencies]
windows = { version = "0.62.2", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Registry",
  "Win32_System_Threading",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging"
]}
