[package]
name = "config-creater"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ConfigCreater"
path = "src/main.rs"

[build-dependencies]
serde_json = "1.0.140"

[dependencies]
windows = { version = "0.61.1", features = [
  "Win32_Graphics_Gdi",
  "Win32_System_Com",
  "Win32_UI_Shell_Common"
]}
