[package]
name = "wallpaper-changer"
version.workspace = true
edition.workspace = true

[[bin]]
name = "WallpaperChanger"
path = "src/main.rs"

[build-dependencies]
serde_json = "1.0.140"

[dependencies]
image = "0.25.6"
rand = "0.9.1"
yaml-rust2 = "0.6.0"
walkdir = "2.5.0"
windows = { version = "0.61.1", features = [
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging"
]}
